stopped vertical overflow in full screen popup in gallery

--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -235,15 +235,15 @@ button::-moz-focus-inner {
 /* Main image in popup */
 img.mfp-img {
   width: auto;
+  max-height: 90vh;
   max-width: 100%;
-  height: auto;
   display: block;
   line-height: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 40px 0 40px;
-  margin: 0 auto; }
+  margin: 30px auto; 
+}
 
 /* The shadow behind the image */
 .mfp-figure {
